move smaller gap between fileman title header and main from negative margin on fm to smaller margin class on the h1 header. Include contentblock and filemanager spacing in layout calculation. Include any margins in all layout height calculations for robustness. Fixes height overflow in fileman with ucph erda skin on multiple platforms. Still needs fixes in filechooser on some platforms.
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@3106 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/css/jquery.managers.css
+++ b/mig/images/css/jquery.managers.css
@@ -35,9 +35,11 @@
     cursor: default;  
 }
 /* Extras for fm_filemanager */
-#fm_filemanager {
+h1.fileman-title {
     /* Pull filemanager up close to title block */
-    margin-top: -10px;
+    margin-bottom: 2px;
+}
+#fm_filemanager {
     border: 1px solid grey;
 }
 #jm_jobmanager {
